# cptool

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/templates/: default_program.cpp
docs/: add.md  builtin-checkers.md  case.md  fixtures.md  pkg.md  problem-yaml.md  report.md  test.md
example/a_plus_b/: problem.yaml  statement.md
example/a_plus_b/src/: gen.cpp
example/sum/: .gitignore  editorial.md  problem.yaml  statement.md
example/sum/fixtures/checker/fail/: first_power_only.in
example/sum/fixtures/input/: one_mod.in
example/sum/fixtures/validator/fail/: k_too_large.in  value_too_large.in
example/sum/fixtures/validator/pass/: boundary.in
example/sum/src/: brute.cpp  chk.cpp  gen.cpp  std.cpp  testlib.h  val.cpp  wrong.cpp
scripts/: build-release-linux.sh  build-release.ps1  build_release.py  check.py  release.ps1
src/: cli.rs  export.rs  lib.rs  main.rs  support.rs  tool.rs
src/cli/: args.rs  json.rs
src/config/: problem.rs  program.rs
src/config/problem/: test.rs
src/core/: program.rs
src/export/: syzoj.rs
src/tool/: add.rs  batch_args.rs  check.rs  clean.rs  data.rs  evidence.rs  explain.rs  fixture.rs  judge.rs  package.rs  problem.rs  program.rs  run.rs  schema.rs  stress.rs  stress_args.rs  stress_plan.rs  task_expect.rs
src/tool/check/: codes.rs  markdown_sample.rs  mod.rs  package_audit.rs  report.rs  yaml_shape.rs
tests/: evidence.rs  fixtures.rs  full_flow.rs  gen_run_check.rs  smoke_examples.rs  stress.rs
tests/common/: mod.rs
